split fe environment to debug and build

--- a/fe-src/lib/public.less
+++ b/fe-src/lib/public.less
@@ -10,7 +10,7 @@ a {
   outline: none;
   text-decoration: none;
   &:hover {
-    color: #fff;
+    color: #33c;
   }
   &[disabled] {
     color: #9b9b9b;
