--- a/static/style.css
+++ b/static/style.css
@@ -1,226 +1,1 @@
-body,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-hr,
-p,
-dl,
-dt,
-dd,
-ul,
-ol,
-li,
-pre,
-form,
-button,
-input,
-textarea,
-th,
-td {
-  margin: 0;
-  padding: 0;
-}
-a {
-  color: #333;
-  cursor: pointer;
-  outline: none;
-  text-decoration: none;
-}
-a:hover {
-  color: #fff;
-}
-a[disabled] {
-  color: #9b9b9b;
-}
-a[disabled]:hover {
-  color: #9b9b9b;
-}
-body,
-button,
-input,
-select,
-textarea {
-  font: 14px/20px "Lantinghei SC", "Microsoft YaHei", sans-serif;
-}
-body {
-  background: #a3cccc;
-  background: linear-gradient(135deg, #b0d7d6, #a3cccc);
-  color: #333;
-  height: 100%;
-}
-h1,
-h2,
-h3,
-h4,
-th,
-strong {
-  font-weight: 600;
-}
-html {
-  height: 100%;
-}
-img {
-  border: none;
-}
-input,
-select,
-textarea {
-  background: #fff;
-  border: 1px solid #d2d2d2;
-  border-radius: 3px;
-  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2);
-  box-sizing: border-box;
-  padding: 5px 10px;
-  resize: none;
-}
-input:hover,
-select:hover,
-textarea:hover {
-  border: 1px solid #008cff;
-}
-input[disabled]:hover,
-select[disabled]:hover,
-textarea[disabled]:hover {
-  border: 1px solid #d2d2d2;
-}
-input[type=checkbox] {
-  box-shadow: none;
-  height: 16px;
-  vertical-align: middle;
-  width: 16px;
-}
-li {
-  list-style: none;
-}
-svg {
-  fill: currentColor;
-  transform-origin: center;
-}
-table {
-  border-collapse: collapse;
-}
-[clickable] {
-  cursor: pointer;
-}
-[clickable]:hover {
-  color: #008cff;
-}
-header {
-  height: 100%;
-  padding: 20px 25px;
-  position: fixed;
-  width: 150px;
-  z-index: 10;
-}
-header h1 {
-  font-size: 18px;
-  line-height: 40px;
-  margin-bottom: 10px;
-}
-header li {
-  font-size: 16px;
-  line-height: 40px;
-}
-.container {
-  padding: 70px 30px 30px;
-}
-.button {
-  background: #000;
-  border: 1px solid #000;
-  border-radius: 3px;
-  color: #fff;
-  cursor: pointer;
-  display: inline-block;
-  padding: 5px 15px;
-}
-.button:hover {
-  background: #f4f4f4;
-  border-color: #d2d2d2;
-  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2);
-  color: #000;
-}
-.button[disabled] {
-  background: #666;
-  border: 1px solid #666;
-  box-shadow: none;
-  color: #ccc;
-  cursor: default;
-}
-.button[disabled]:hover {
-  color: #ccc;
-}
-h3 {
-  clear: both;
-  line-height: 30px;
-  padding: 10px;
-}
-.table {
-  border: 1px solid #d2d2d2;
-  width: 100%;
-}
-.table thead th {
-  background: #fff;
-  padding: 10px;
-  text-align: left;
-}
-.table tbody tr:nth-child(even) {
-  background: #fff;
-}
-.table tbody td {
-  border-top: 1px solid #d2d2d2;
-  padding: 10px;
-  vertical-align: middle;
-}
-.table tbody td.cover {
-  line-height: 0;
-  width: 100px;
-}
-.table .button {
-  margin: 2px 0;
-  padding: 3px 10px;
-}
-.table .addLine {
-  background: #fff;
-  text-align: center;
-}
-.switch {
-  background: #d2d2d2;
-  border-radius: 12px;
-  height: 20px;
-  padding: 2px;
-  transition: all 0s .1s;
-  width: 40px;
-}
-.switch span {
-  background: #fff;
-  border-radius: 10px;
-  display: block;
-  height: 20px;
-  text-align: center;
-  transition: all .2s;
-  width: 20px;
-}
-.switch.on {
-  background: #080;
-}
-.switch.on span {
-  margin-left: 20px;
-}
-.red {
-  color: #f00;
-}
-.green {
-  color: #080;
-}
-.blue {
-  color: #00f;
-}
-.brown {
-  color: #a60;
-}
-.grey {
-  color: #888;
-}
+body,button,dd,dl,dt,form,h1,h2,h3,h4,h5,h6,hr,input,li,ol,p,pre,td,textarea,th,ul{margin:0;padding:0}a{color:#333;cursor:pointer;outline:none;text-decoration:none}a:hover{color:#33c}a[disabled],a[disabled]:hover{color:#9b9b9b}body,button,input,select,textarea{font:14px/20px Lantinghei SC,Microsoft YaHei,sans-serif}body{background:#a3cccc;background:linear-gradient(135deg,#b0d7d6,#a3cccc);color:#333;height:100%}h1,h2,h3,h4,strong,th{font-weight:600}html{height:100%}img{border:none}input,select,textarea{background:#fff;border:1px solid #d2d2d2;border-radius:3px;box-shadow:inset 0 1px 3px rgba(0,0,0,.2);box-sizing:border-box;padding:5px 10px;resize:none}input:hover,select:hover,textarea:hover{border:1px solid #008cff}input[disabled]:hover,select[disabled]:hover,textarea[disabled]:hover{border:1px solid #d2d2d2}input[type=checkbox]{box-shadow:none;height:16px;vertical-align:middle;width:16px}li{list-style:none}svg{fill:currentColor;transform-origin:center}table{border-collapse:collapse}[clickable]{cursor:pointer}[clickable]:hover{color:#008cff}header{height:100%;padding:20px 25px;position:fixed;width:150px;z-index:1}header h1{font-size:18px;line-height:40px;margin-bottom:10px}header li{font-size:16px;line-height:40px}.container{padding:70px 30px 30px}.button{background:#000;border:1px solid #000;border-radius:3px;color:#fff;cursor:pointer;display:inline-block;padding:5px 15px}.button:hover{background:#f4f4f4;border-color:#d2d2d2;box-shadow:inset 0 1px 3px rgba(0,0,0,.2);color:#000}.button[disabled]{background:#666;border:1px solid #666;box-shadow:none;color:#ccc;cursor:default}.button[disabled]:hover{color:#ccc}h3{clear:both;line-height:30px;padding:10px}.table{border:1px solid #d2d2d2;width:100%}.table thead th{background:#fff;padding:10px;text-align:left}.table tbody tr:nth-child(even){background:#fff}.table tbody td{border-top:1px solid #d2d2d2;padding:10px;vertical-align:middle}.table tbody td.cover{line-height:0;width:100px}.table .button{margin:2px 0;padding:3px 10px}.table .addLine{background:#fff;text-align:center}.switch{background:#d2d2d2;border-radius:12px;height:20px;padding:2px;transition:all 0s .1s;width:40px}.switch span{background:#fff;border-radius:10px;display:block;height:20px;text-align:center;transition:all .2s;width:20px}.switch.on{background:#080}.switch.on span{margin-left:20px}.red{color:red}.green{color:#080}.blue{color:#00f}.brown{color:#a60}.grey{color:#888}
